--- a/logstash/pipeline/logstash.conf
+++ b/logstash/pipeline/logstash.conf
@@ -1,19 +1,19 @@
 input {
-	beats {
-		port => 5044
-	}
-
-	tcp {
-		port => 50000
-	}
+  jdbc {
+    jdbc_driver_library => "h2-2.2.224.jar"
+    jdbc_driver_class => "org.h2.Driver"
+    jdbc_connection_string => "jdbc:h2:~/h2db/elasticsearch;DB_CLOSE_ON_EXIT=FALSE"
+    jdbc_user => ""
+    jdbc_password => ""
+    schedule => "* * * * *"
+    statement => "SELECT * FROM product"
+  }
 }
-
-## Add your filters / logstash plugins configuration here
-
 output {
-	elasticsearch {
-		hosts => "elasticsearch:9200"
-		user => "logstash_internal"
-		password => "${LOGSTASH_INTERNAL_PASSWORD}"
-	}
+  elasticsearch {
+    hosts => ["localhost:9200"]
+    index => "product-index"
+    document_type => "data"
+  }
+  stdout { codec => rubydebug }
 }
