--- a/logstash/pipeline/logstash.conf
+++ b/logstash/pipeline/logstash.conf
@@ -1,8 +1,8 @@
 input {
   jdbc {
-    jdbc_driver_library => "h2-2.2.224.jar"
+    jdbc_driver_library => "/usr/share/logstash/jdbc/h2-2.1.214.jar"
     jdbc_driver_class => "org.h2.Driver"
-    jdbc_connection_string => "jdbc:h2:~/h2db/elasticsearch;DB_CLOSE_ON_EXIT=FALSE"
+    jdbc_connection_string => "jdbc:h2:tcp://h2:1521/opt/h2-data/test;DB_CLOSE_ON_EXIT=FALSE"
     jdbc_user => ""
     jdbc_password => ""
     schedule => "* * * * *"
@@ -11,7 +11,9 @@ input {
 }
 output {
   elasticsearch {
-    hosts => ["localhost:9200"]
+    hosts => ["elasticsearch:9200"]
+    user => "elastic"
+    password => "jk1234"
     index => "product-index"
     document_type => "data"
   }
