[main] ELK docker-compose

--- a/logstash/pipeline/logstash.conf
+++ b/logstash/pipeline/logstash.conf
@@ -6,13 +6,13 @@ input {
     jdbc_user => ""
     jdbc_password => ""
     schedule => "* * * * *"
-    statement => "SELECT * FROM product"
+    statement => "SELECT * FROM PRODUCT"
   }
 }
 output {
   elasticsearch {
-    hosts => ["elasticsearch:9200"]
-    user => "elastic"
+    hosts => ["http://elasticsearch:9200"]
+    user => "logstash_internal"
     password => "jk1234"
     index => "product-index"
     document_type => "data"
