--- a/logstash/pipeline/logstash.conf
+++ b/logstash/pipeline/logstash.conf
@@ -12,7 +12,7 @@ input {
 output {
   elasticsearch {
     hosts => ["http://elasticsearch:9200"]
-    user => "logstash_internal"
+    user => "elastic"
     password => "jk1234"
     index => "product-index"
     document_type => "data"
