[main] elasticsearch version 변경 8.6.2

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -119,7 +119,7 @@ services:
     environment:
       H2_OPTIONS: -ifNotExists
     volumes:
-      - ./h2/:/opt/h2-data
+      - ./h2/opt/h2-data/:/opt/h2-data
     networks:
       - elk
     restart: unless-stopped
