--- a/logstash/config/logstash.yml
+++ b/logstash/config/logstash.yml
@@ -4,3 +4,5 @@
 #
 http.host: "0.0.0.0"
 xpack.monitoring.elasticsearch.hosts: [ "http://elasticsearch:9200" ]
+xpack.monitoring.elasticsearch.username: logstash_internal
+xpack.monitoring.elasticsearch.password: ${LOGSTASH_INTERNAL_PASSWORD}
