--- a/logstash/pipeline/logstash.conf
+++ b/logstash/pipeline/logstash.conf
@@ -1,20 +1,28 @@
 input {
-  jdbc {
-    jdbc_driver_library => "/usr/share/logstash/jdbc/h2-2.1.214.jar"
-    jdbc_driver_class => "org.h2.Driver"
-    jdbc_connection_string => "jdbc:h2:tcp://h2:1521/opt/h2-data/test;DB_CLOSE_ON_EXIT=FALSE"
-    jdbc_user => ""
-    jdbc_password => ""
-    schedule => "* * * * *"
-    statement => "SELECT * FROM PRODUCT"
+  tcp {
+    port => 5000
+    type => syslog
+  }
+  udp {
+    port => 5000
+    type => syslog
   }
 }
-output {
-  elasticsearch {
-    hosts => ["http://elasticsearch:9200"]
-    user => "elastic"
-    password => "jk1234"
-    index => "product-index"
+
+filter {
+  if [type] == "syslog" {
+    grok {
+      match => { "message" => "%{SYSLOGTIMESTAMP:syslog_timestamp} %{SYSLOGHOST:syslog_hostname} %{DATA:syslog_program}(?:\[%{POSINT:syslog_pid}\])?: %{GREEDYDATA:syslog_message}" }
+      add_field => [ "received_at", "%{@timestamp}" ]
+      add_field => [ "received_from", "%{host}" ]
+    }
+    date {
+      match => [ "syslog_timestamp", "MMM  d HH:mm:ss", "MMM dd HH:mm:ss" ]
+    }
   }
+}
+
+output {
+  elasticsearch { hosts => ["elasticsearch:9200"] }
   stdout { codec => rubydebug }
 }
