[main] elasticsearch version 변경 8.6.2

--- a/logstash/pipeline/h2toelasticsearch.conf
+++ b/logstash/pipeline/h2toelasticsearch.conf
@@ -9,10 +9,16 @@ input {
     statement => "select * from product"
   }
 }
+filter {
+  mutate {
+    rename => { "product_id" => "productId" }
+  }
+}
 output {
   elasticsearch {
     hosts => ["elasticsearch:9200"]
     index => "product-index"
+    document_id => "%{productId}" # productId를 문서 ID로 사용
   }
   stdout { codec => rubydebug }
 }
